infrastructure/standalone/conf/dp-api/dp-api.yaml
#
# Copyright 2021 Merck & Co., Inc. Kenilworth, NJ, USA.
#
#	Licensed to the Apache Software Foundation (ASF) under one
#	or more contributor license agreements. See the NOTICE file
#	distributed with this work for additional information
#	regarding copyright ownership. The ASF licenses this file
#	to you under the Apache License, Version 2.0 (the
#	"License"); you may not use this file except in compliance
#	with the License. You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
#
#	Unless required by applicable law or agreed to in writing,
#	software distributed under the License is distributed on an
#	"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
#	KIND, either express or implied. See the License for the
#	specific language governing permissions and limitations
#	under the License.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-api
  labels:
    app: dp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-api
  template:
    metadata:
      labels:
        app: dp-api
    spec:
      hostname: dp-api
      containers:
        - name: dp-api
          image: dp/api
          command: ["/bin/bash"]
          args:
            [
              "-c",
              "env > /opt/api/target/universal/stage/.env && set -o allexport && source /opt/api/target/universal/stage/.env && ./bin/dataprofiler-api-launcher-minikube.sh",
            ]

            # [
            #   "-c",
            #   "/opt/api/target/universal/stage/bin/set-env.sh && set -o allexport && source /opt/api/target/universal/stage/.env && ./bin/dataprofiler-api-launcher-minikube.sh",
            # ]
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
          stdin: true
          tty: true
