infrastructure/standalone/conf/dp-api/dp-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dp-api-ingress
  labels:
    name: dp-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: "/api(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: dp-api
                port:
                  number: 9000
